[metadata]
name = example-package-sodacris
version = 0.0.2
author = soda92
author_email = wjxa20152015@gmail.com
description = A small example package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/soda92/py_example_package
project_urls =
    Bug Tracker = https://github.com/soda92/py_example_package/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)    
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.10

[options.packages.find]
where = src
